alarm: Print warning if timerfd I/O fails

Reading from a timerfd shouldn't fail, but if it
does we should print what's going on.

https://bugzilla.gnome.org/show_bug.cgi?id=708975